--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.administrator.test">
 
     <application
+        android:name=".TestApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".base.BaseActivity"></activity>
+        <activity android:name=".activity.SecondActivity"></activity>
     </application>
 
 </manifest>
