--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.administrator.test"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -33,9 +33,34 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-//    implementation 'com.alibaba:arouter-api:1.4.1'
-    implementation 'com.alibaba:arouter-api:1.3.0'
+    implementation 'com.alibaba:arouter-api:1.4.1'
+    //各种方法类集合
+    implementation 'com.blankj:utilcode:1.13.5'
+    //图片框架  glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //zxing二维码识别库
+    implementation 'com.github.yuzhiqiang1993:zxing:2.0.0'
+    //AE动画框架
+//    implementation 'com.airbnb.android:lottie:2.8.0'
+    //rxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    //阿里巴巴fastjson库
+    implementation 'com.alibaba:fastjson:1.2.51'
+    //greenDao
+    implementation 'org.greenrobot:greendao:3.2.2'
+    //通用RecycleView适配器
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    //log打印框架
+    implementation 'com.orhanobut:logger:2.2.0'
+    //底部导航栏框架
+    implementation 'com.roughike:bottom-bar:2.3.1'
+    //提供刷新、加载更多、动画特效等额外能力的RecyclerView框架
+    implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.3'
+    //页面滑动退出框架
+    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
