--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //xzing二维码库
+        maven { url 'https://jitpack.io' }
     }
 }
 
