--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.alibaba:arouter-api:1.4.1'
     //各种方法类集合
     implementation 'com.blankj:utilcode:1.13.5'
+    //各种方法类集合
+//    implementation 'com.abrahamcaijin.commonutil:CommonUtil:1.0.2'
     //图片框架  glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     //zxing二维码识别库
@@ -58,6 +60,13 @@ dependencies {
     implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.3'
     //页面滑动退出框架
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
+
+    //rx/retrofit相关
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'io.reactivex:rxjava:1.2.6'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
