--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     //图片框架  glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     //zxing二维码识别库
-    implementation 'com.github.yuzhiqiang1993:zxing:2.0.0'
+    implementation 'com.github.yuzhiqiang1993:zxing:2.2.1'
     //AE动画框架
 //    implementation 'com.airbnb.android:lottie:2.8.0'
     //rxAndroid
@@ -56,14 +56,15 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     //底部导航栏框架
     implementation 'com.roughike:bottom-bar:2.3.1'
-    //提供刷新、加载更多、动画特效等额外能力的RecyclerView框架
-    implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.3'
     //页面滑动退出框架
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
 
+    implementation 'com.android.support:design:25.0.1'
+
+
     //rx/retrofit相关
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'io.reactivex:rxjava:1.2.6'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
