--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -58,6 +59,9 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     //页面滑动退出框架
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
+    //AOP
+    implementation 'org.aspectj:aspectjrt:1.8.9'
+
 
     implementation 'com.android.support:design:25.0.1'
 
