--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,17 +61,21 @@ dependencies {
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
     //AOP
     implementation 'org.aspectj:aspectjrt:1.8.9'
+    //vlayotu
+    implementation 'com.alibaba.android:vlayout:1.2.8'
+    //SmartRefreshLayout
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
 
 
     implementation 'com.android.support:design:25.0.1'
 
 
     //rx/retrofit相关
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'io.reactivex:rxjava:1.2.6'
+    implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
