--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".base.BaseActivity"></activity>
+        <activity android:name=".base.activity.BaseActivity"></activity>
         <activity android:name=".activity.SecondActivity"></activity>
     </application>
 
