--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [ moduleName : project.getName() ]
+                arguments = [moduleName: project.getName()]
             }
         }
     }
@@ -35,10 +35,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.alibaba:arouter-api:1.4.1'
-    //各种方法类集合
+    //各种方法类集合，具体方法在说明文档 {@link /app/document/commonUtils.txt}
     implementation 'com.blankj:utilcode:1.13.5'
-    //各种方法类集合
-//    implementation 'com.abrahamcaijin.commonutil:CommonUtil:1.0.2'
     //图片框架  glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     //zxing二维码识别库
@@ -48,7 +46,7 @@ dependencies {
     //rxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    //阿里巴巴fastjson库
+    //阿里巴巴fastjson库 具体方法在说明文档 {@link /app/document/commonUtils.txt}
     implementation 'com.alibaba:fastjson:1.2.51'
     //greenDao
     implementation 'org.greenrobot:greendao:3.2.2'
@@ -67,9 +65,7 @@ dependencies {
     //SmartRefreshLayout
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
 
-
     implementation 'com.android.support:design:25.0.1'
-
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
