--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     //通用RecycleView适配器
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    //RecycleView动画库
+    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
+    //列表动画库
+    implementation 'com.nineoldandroids:library:2.4.0'
     //log打印框架
     implementation 'com.orhanobut:logger:2.2.0'
     //底部导航栏框架
