--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".base.activity.BaseActivity"></activity>
         <activity android:name=".activity.SecondActivityBase"></activity>
         <activity android:name=".activity.TabActivity"></activity>
+        <activity android:name=".activity.ListActivity"></activity>
     </application>
 
 </manifest>
