--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,10 @@ dependencies {
     implementation 'com.alibaba.android:vlayout:1.2.8'
     //SmartRefreshLayout
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
+    //cardview
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
-    implementation 'com.android.support:design:25.0.1'
+    implementation 'com.android.support:design:28.0.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
