--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,17 @@ dependencies {
     //AOP
     implementation 'org.aspectj:aspectjrt:1.8.9'
     //vlayotu
-    implementation 'com.alibaba.android:vlayout:1.2.8'
+//    implementation 'com.alibaba.android:vlayout:1.2.6'
+    //阿里巴巴扩展列表
+    api('com.alibaba.android:vlayout:1.2.6@aar') {
+        transitive = true
+    }
     //SmartRefreshLayout
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
     //cardview
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //banner  具体方法在说明文档 {@link /app/document/banner.txt}
+    implementation 'com.youth.banner:banner:1.4.10'
 
     implementation 'com.android.support:design:28.0.0'
 
