--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,6 @@ dependencies {
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.1'
     //AE动画框架
 //    implementation 'com.airbnb.android:lottie:2.8.0'
-    //rxAndroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     //阿里巴巴fastjson库 具体方法在说明文档 {@link /app/document/commonUtils.txt}
     implementation 'com.alibaba:fastjson:1.2.51'
     //greenDao
@@ -77,13 +74,13 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-
-    //rx/retrofit相关
+    //rx
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    //retrofit相关
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-    implementation 'io.reactivex:rxjava:1.3.0'
-    implementation 'io.reactivex:rxandroid:1.2.1'
+
     //Lifecycles, LiveData, and ViewModel
     implementation "android.arch.lifecycle:runtime:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
