--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,6 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     //RecycleView动画库
     implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
-    //RecycleView侧滑菜单
-    implementation 'com.yanzhenjie:recyclerview-swipe:1.2.0'
-
     //列表动画库
     implementation 'com.nineoldandroids:library:2.4.0'
     //log打印框架
@@ -89,6 +86,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
+    //侧滑recyclerview
+    implementation 'com.github.LoomisKoo:SwipeRecyclerview:1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
