--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".activity.TabActivity" />
         <activity android:name=".activity.ListActivity" />
         <activity android:name=".activity.WebActivity" />
-
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.LoginPlayAndroidActivity" />
     </application>
 
 </manifest>
