--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,10 @@ android {
         applicationId "com.example.administrator.test"
         minSdkVersion 19
         targetSdkVersion 28
+        buildToolsVersion "28.0.2"
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -26,14 +27,15 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
 
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'com.alibaba:arouter-api:1.4.1'
     //各种方法类集合，具体方法在说明文档 {@link /app/document/commonUtils.txt}
     implementation 'com.blankj:utilcode:1.13.5'
@@ -66,11 +68,11 @@ dependencies {
     //SmartRefreshLayout
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
     //cardview
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     //banner  具体方法在说明文档 {@link /app/document/banner.txt}
     implementation 'com.youth.banner:banner:1.4.10'
 
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
@@ -82,19 +84,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     //Lifecycles, LiveData, and ViewModel
-    implementation "android.arch.lifecycle:runtime:1.1.1"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.1.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha01"
 
     //侧滑recyclerview
     implementation 'com.github.LoomisKoo:SwipeRecyclerview:1.0'
     //butterknife
-//    implementation 'com.jakewharton:butterknife:10.0.0'
-//    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'org.jetbrains:annotations:15.0'
 
 }
