--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/noAnimTheme">
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,13 +30,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
+        <activity
+            android:name=".activity.MainActivity"/>
+
         <activity android:name=".activity.SecondActivityBase" />
         <activity android:name=".activity.TabActivity" />
         <activity android:name=".activity.ListActivity" />
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.LoginPlayAndroidActivity" />
+        <activity
+            android:name=".activity.LoginPlayAndroidActivity"/>
     </application>
 
 </manifest>
