--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,11 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+//    implementation 'com.google.android.material:material:1.0.0+'
+//    com.android.support:cardview-v7
+//    androidx.cardview:cardview:1.0.0
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
