--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         jcenter()
         //xzing二维码库
         maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
     }
 }
 
