--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     //design库
     implementation 'com.google.android.material:material:1.1.0-alpha02'
+    //流式布局
+    implementation 'com.github.1002326270xc:LayoutManager-FlowLayout:v1.7'
     //收藏、赞等效果的checkbook
 //    implementation'com.github.jd-alexander:LikeButton:0.2.3'
     //    implementation 'com.google.android.material:material:1.0.0+'
