--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,16 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.MainActivity" />
 
         <activity android:name=".activity.SecondActivityBase" />
         <activity android:name=".activity.TabActivity" />
-        <activity android:name=".activity.ListActivity" />
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity
-            android:name=".activity.LoginPlayAndroidActivity"/>
+        <activity android:name=".activity.LoginPlayAndroidActivity" />
+        <activity android:name=".activity.ArticleListActivity" />
     </application>
 
 </manifest>
