--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.LoginPlayAndroidActivity" />
-        <activity android:name=".activity.ArticleListActivity" />
+        <activity android:name=".activity.KnowledgeSystemArticleActivity" />
     </application>
 
 </manifest>
