--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,9 +116,11 @@ dependencies {
     //流式布局
     implementation 'com.github.1002326270xc:LayoutManager-FlowLayout:v1.7'
     //收藏、赞等效果的checkbook
-    implementation'com.github.jd-alexander:LikeButton:0.2.3'
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     //流式布局
     implementation 'com.google.android:flexbox:1.0.0'
+    //图片浏览
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     //    implementation 'com.google.android.material:material:1.0.0+'
 
