--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.LoginPlayAndroidActivity" />
         <activity android:name=".activity.KnowledgeSystemArticleActivity" />
+        <activity android:name=".activity.BigImgActivity" />
     </application>
 
 </manifest>
