--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,8 +86,7 @@ dependencies {
     //cardview
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    //banner  具体方法在说明文档 {@link /app/document/banner.txt}
-    implementation 'com.youth.banner:banner:1.4.10'
+
     implementation 'com.google.android.material:material:1.1.0-alpha02'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
@@ -121,6 +120,8 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
     //图片浏览
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    //banner  具体方法在说明文档 {@link /app/document/banner.txt}
+    implementation 'com.github.LoomisKoo:banner:1.0.2'
 
     //    implementation 'com.google.android.material:material:1.0.0+'
 
