优化 福利页面：图片点击缩放动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".activity.BigImgActivity"
             android:theme="@style/TransitionsTheme" />
+        <activity
+            android:name=".activity.ViewBigImageActivity"
+            android:theme="@style/TransitionsTheme" />
     </application>
 
 </manifest>
