--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,8 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     //banner  具体方法在说明文档 {@link /app/document/banner.txt}
     implementation 'com.github.LoomisKoo:banner:1.0.3'
+    //展开菜单
+    implementation 'com.nightonke:boommenu:2.1.1'
 
     //    implementation 'com.google.android.material:material:1.0.0+'
 
