--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //图片框架  glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
 
     //zxing二维码识别库
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.1'
