--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,14 +38,17 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.LoginPlayAndroidActivity" />
         <activity android:name=".activity.KnowledgeSystemArticleActivity" />
-        <activity android:name=".activity.MovieDetailActivity"
-            android:theme="@style/TransitionsTheme"
-            />
+        <activity
+            android:name=".activity.MovieDetailActivity"
+            android:theme="@style/TransitionsTheme" />
         <activity
             android:name=".activity.BigImgActivity"
             android:theme="@style/TransitionsTheme" />
         <activity
             android:name=".activity.ViewBigImageActivity"
+            android:theme="@style/TransitionsTheme" />
+        <activity
+            android:name=".activity.ProjectHomeActivity"
             android:theme="@style/TransitionsTheme" />
     </application>
 
