优化 调整电影详情UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,7 @@
         <activity
             android:name=".activity.ViewBigImageActivity"
             android:theme="@style/TransitionsTheme" />
-        <activity
-            android:name=".activity.ProjectHomeActivity" />
+        <activity android:name=".activity.ProjectHomeActivity" />
     </application>
 
 </manifest>
