--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,8 @@ dependencies {
     implementation 'com.github.LoomisKoo:banner:1.0.3'
     //展开菜单
     implementation 'com.nightonke:boommenu:2.1.1'
+    //json动画
+    implementation 'com.airbnb.android:lottie:1.0.1'
 
     //    implementation 'com.google.android.material:material:1.0.0+'
 
