--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,6 +127,8 @@ dependencies {
     implementation 'com.nightonke:boommenu:2.1.1'
     //json动画
     implementation 'com.airbnb.android:lottie:1.0.1'
+    //加载动画
+    implementation 'com.zyao89:zloading:1.2.0'
 
     //    implementation 'com.google.android.material:material:1.0.0+'
 
