--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,9 @@ buildscript {
         //AOP
         classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
         //阿里热修复
-        classpath 'com.aliyun.ams:emas-services:1.0.1'
+//        classpath 'com.aliyun.ams:emas-services:1.0.1'
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.antfortune.freeline:gradle:0.8.8'
     }
 }
 
@@ -24,7 +25,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.google.com" }
         //阿里热修复
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
     }
 }
 
